--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/front-flex.min.css">
     <link rel="stylesheet" href="css/lightgallery.min.css">
     <link href="https://unpkg.com/maplibre-gl/dist/maplibre-gl.css" rel="stylesheet" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <!-- Styles -->
     <style type="text/css" media="all" id="siteorigin-panels-layouts-head">
         /* Layout 7 */
@@ -409,12 +409,15 @@
 
     <!-- JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script type='text/javascript' src="./js/playerSoundCloud.js" id="form-js"></script>
     <script src="js/configWeb.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pace-js@1.0.2/pace.min.js" id='pace-js'></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script defer type='text/javascript' src='./js/styling.min.js' id='siteorigin-panels-front-styles-js'></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
     <script type='text/javascript' src="./js/formRsvp.js" id="form-js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    
 </head>
 
 <body
@@ -466,7 +469,7 @@
                             sizes="(max-width: 400px) 100vw, 400px" />
                     </div>
                     <div class="hero-action">
-                        <a href="#" class="hero-button anchor-link">
+                        <a href="#intro" class="hero-button anchor-link">
                             <span>Entrar en el sitio</span>
                             <i class="fa fa-angle-double-down"></i>
                         </a>
@@ -533,15 +536,15 @@
                                                     <div
                                                         class="jackrose-animation-fade-in panel-widget-style panel-widget-style-for-7-0-0-0">
                                                         <div
-                                                            class="so-widget-jackrose-sow-couple-intro so-widget-jackrose-sow-couple-intro-default-d75171398898-7">
+                                                            class="so-widget-jackrose-sow-couple-intro align-center so-widget-jackrose-sow-couple-intro-default-d75171398898-7">
+                                                            <div class="jackrose-sow-couple-intro-photo photo-radius">
+                                                                <img width="240" height="260"
+                                                                    src="img/intro/gromm&bride.jpeg"
+                                                                    class="attachment-full size-full" alt=""
+                                                                    loading="lazy" />
+                                                            </div>
                                                             <div class="jackrose-sow-couple-intro align-center">
                                                                 <div class="jackrose-sow-couple-intro-groom ">
-                                                                    <div class="jackrose-sow-couple-intro-photo">
-                                                                        <img width="240" height="260"
-                                                                            src="./img/intro/intro-groom.png"
-                                                                            class="attachment-full size-full" alt=""
-                                                                            loading="lazy" />
-                                                                    </div>
                                                                     <div
                                                                         class="jackrose-sow-couple-intro-name typography-heading">
                                                                         John Alexander Hernández Restrepo</div>
@@ -553,12 +556,6 @@
                                                                         loading="lazy" />
                                                                 </div>
                                                                 <div class="jackrose-sow-couple-intro-bride ">
-                                                                    <div class="jackrose-sow-couple-intro-photo">
-                                                                        <img width="240" height="260"
-                                                                            src="img/intro/intro-bride.png"
-                                                                            class="attachment-full size-full" alt=""
-                                                                            loading="lazy" />
-                                                                    </div>
                                                                     <div
                                                                         class="jackrose-sow-couple-intro-name typography-heading">
                                                                         Laura Marcela Aguirre Ortega</div>
@@ -857,14 +854,16 @@
                                                                             aria-atomic="true"></p>
                                                                         <ul></ul>
                                                                     </div>
-                                                                    <form id="rsvpForm" autocomplete="off" novalidate="novalidate">
+                                                                    <form id="rsvpForm" autocomplete="off"
+                                                                        novalidate="novalidate">
                                                                         <p>
                                                                             <label>Su nombre</label>
                                                                             <br>
                                                                             <span class="guestname">
-                                                                                <input type="text" id="guestname" name="guestname" 
-                                                                                    value="" size="40"
-                                                                                    class="input-block" autocomplete="off" />
+                                                                                <input type="text" id="guestname"
+                                                                                    name="guestname" value="" size="40"
+                                                                                    class="input-block"
+                                                                                    autocomplete="off" />
                                                                             </span>
                                                                         </p>
                                                                         <p>
@@ -872,9 +871,10 @@
                                                                                 electrónico</label>
                                                                             <br>
                                                                             <span class="email">
-                                                                                <input type="email" id="email" name="email"
-                                                                                    value="" size="40"
-                                                                                    class="input-block" autocomplete="off" />
+                                                                                <input type="email" id="email"
+                                                                                    name="email" value="" size="40"
+                                                                                    class="input-block"
+                                                                                    autocomplete="off" />
                                                                             </span>
                                                                         </p>
                                                                         <p>
@@ -884,14 +884,23 @@
                                                                                 <span class="wpcf7-radio input-radio">
                                                                                     <span class="wpcf7-list-item">
                                                                                         <label>
-                                                                                            <input type="radio" name="attend" value="Sí, estaré allí"/>
-                                                                                            <span class="wpcf7-list-item-label">Sí, estaré allí.</span>
+                                                                                            <input type="radio"
+                                                                                                name="attend"
+                                                                                                value="Sí, estaré allí" />
+                                                                                            <span
+                                                                                                class="wpcf7-list-item-label">Sí,
+                                                                                                estaré allí.</span>
                                                                                         </label>
                                                                                     </span>
                                                                                     <span class="wpcf7-list-item">
                                                                                         <label>
-                                                                                            <input type="radio" name="attend" value="Sorry, I can&#039;t come"/>
-                                                                                            <span class="wpcf7-list-item-label">Lo siento, no podre ir.</span>
+                                                                                            <input type="radio"
+                                                                                                name="attend"
+                                                                                                value="Sorry, I can&#039;t come" />
+                                                                                            <span
+                                                                                                class="wpcf7-list-item-label">Lo
+                                                                                                siento, no podre
+                                                                                                ir.</span>
                                                                                         </label>
                                                                                     </span>
                                                                                 </span>
@@ -918,12 +927,15 @@
                                                                             <label>Notas</label>
                                                                             <br>
                                                                             <span class="notes">
-                                                                                <textarea id="notes" name="notes" cols="40"
-                                                                                    rows="3" autocomplete="off"></textarea>
+                                                                                <textarea id="notes" name="notes"
+                                                                                    cols="40" rows="3"
+                                                                                    autocomplete="off"></textarea>
                                                                             </span>
                                                                         </p>
                                                                         <p>
-                                                                            <input type="submit" value="Enviar Confirmación" class="wpcf7-submit input-block" />
+                                                                            <input type="submit"
+                                                                                value="Enviar Confirmación"
+                                                                                class="wpcf7-submit input-block" />
                                                                         </p>
                                                                         <p style="display: none !important;">
                                                                             <input type="hidden" id="ak_js_1"
@@ -969,8 +981,9 @@
                                                         class="jr-animation-fade-in-up jackrose-animation-fade-in panel-widget-style panel-widget-style-for-7-5-0-1">
                                                         <div class="so-widget-sow-editor so-widget-sow-editor-base">
                                                             <div class="siteorigin-widget-tinymce textwidget">
-                                                                <h4 style="text-align: center;" class="jackrose-sow-events-grid-item-title typography-heading">
-                                                                        Traje formal</h4>
+                                                                <h4 style="text-align: center;"
+                                                                    class="jackrose-sow-events-grid-item-title typography-heading">
+                                                                    Traje formal</h4>
                                                                 <p style="text-align: center;">
                                                                     Se reserva el color
                                                                     <strong>blanco</strong> para la novia y los colores
@@ -998,6 +1011,7 @@
                                                         <div
                                                             class="so-widget-jackrose-sow-quote so-widget-jackrose-sow-quote-default-d75171398898-7">
                                                             <div class="jackrose-sow-quote align-center"
+                                                                style="text-align: center;"
                                                                 data-jackrose-autoplay="5000">
                                                                 <div class="jackrose-sow-quote-item">
                                                                     <div class="jackrose-sow-quote-text">El hombre y la
@@ -1199,6 +1213,14 @@
                         </article>
                     </main>
                 </div>
+            </div>
+        </div>
+        <div id="background-music" class="background-music background-music-bottom-left">
+            <button class="background-music-toggle toggle">
+                <span class="fa fa-music"></span>
+            </button>
+            <div class="background-music-embed">
+                <iframe id="soundcloud-iframe" width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/513636780&amp;color=b4d2c8&amp;auto_play=true&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe>
             </div>
         </div>
     </div>
